refactor: FileInformation 기반 파일 연관 처리로 변경